--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -19,7 +19,7 @@ const categories = [...new Set(blog.map((post) => post.data.category))]
 ---
 
 <Base title="Blog" description="Here is where I create, break, and write about things.">
-	<h1>My We<span class="text-white">b Log</span>s</h1>
+	<h1>My Web Logs</h1>
 	<p class="mt-8">Here is where I create, break, and write about things.</p>
 	<p class="mb-12">
 		Browse by category:
