--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -4,14 +4,10 @@ const { class: className = "", style = "" } = Astro.props
 
 <div
 	class:list={[
-		"ring ring-secondary-dimmer rounded-md p-4 my-2 transition-all ease-out duration-300 text-left",
-		"bg-secondary-dim/25",
-		"hover:ring-primary",
-		"hover:bg-transparent",
-		"hover:shadow-xl",
-		"active:ring-primary",
-		"active:bg-transparent",
-		"active:shadow-xl",
+		"ring ring-card-ring rounded-md p-4 my-2 transition-all ease-out duration-300 text-left",
+		"bg-card-bg text-card-text",
+		"hover:ring-accent hover:bg-transparent hover:shadow-xl",
+		"active:ring-accent active:bg-transparent active:shadow-xl",
 		"Card",
 		className,
 	]}
