--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -7,7 +7,7 @@ const nav = [
 
 const current = Astro.url.pathname
 
-function selectedNav(url) {
+function selectedNav(url: string) {
 	return url != "/"
 		? current.startsWith(url)
 		: current == "/"
@@ -15,19 +15,19 @@ function selectedNav(url) {
 ---
 
 <div class="flex flex-row xl:flex-col xl:gap-8 items-center xl:items-end justify-between">
-	<h2 class="text-white max-w-40 mb-0 xl:mb-6 font-sans">
-		<a target="_self" href="/" class="clear">q1z<span class="text-primary">.</span>dev</a>
+	<h2 class="text-strong max-w-40 mb-0 xl:mb-6 font-sans">
+		<a target="_self" href="/" class="clear">q1z<span class="text-accent">.</span>dev</a>
 	</h2>
-	<nav class="text-lg flex flex-row flex-wrap ml-8 justify-between xl:ml-0 xl:flex-col gap-x-4 xl:gap-3">
+	<nav class="text-lg flex flex-row flex-wrap justify-between xl:flex-col gap-x-4 xl:gap-3">
 		{nav.map((item) => (
 			<a
 				href={item.href}
 				target="_self"
 				class:list={[
 					selectedNav(item.href)
-						? "text-primary"
-						: "text-secondary-dimmer",
-					"hover:text-primary active:text-primary transition-all ease-out duration-300 xl:block border-none font-sans font-bold group"
+						? "text-accent"
+						: "text-text-dim",
+					"hover:text-accent active:text-accent transition-all ease-out duration-300 xl:block border-none font-sans font-bold group"
 				]}
 			>
 				<span class:list={[
